HSEARCH-5180 Add type groups to mass indexer reporting